# Een

./: .RData  .Rhistory  .claudeignore  .cursorrules  .cursorrules.optimized  .dockerignore  .env.example  .env.production  .gallery_hash  .gitignore  .lighthouserc.json  .pre-commit-config.yaml  .stignore  .vercelignore  1+1=1_Metagambit_Unity_Proof.lean  1.0.0  1plus1equals1_metagambit.py  404.html  5000_ELO_AGI_Metastation_Metagambit.py  AGENT_INSTRUCTIONS.md  AI_MODEL_UPGRADE_SUMMARY.md  API_STRUCTURE.md  AUTH_SETUP.md  BUG_FIXES_SUMMARY.md  CARE_MODE_TOGGLE.bat  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP_INTEGRATION.md  CLAUDE_SYSTEM_CONFIG.md  CLAUDE_TIMEOUT_FIX_COMPLETE.md  CLEANUP_IGNORED_FILES.bat  CLEANUP_KEEP_MEDIA.bat  CLEANUP_KEEP_MEDIA_FIXED.bat  CLEAN_TERMINAL.bat  COMPREHENSIVE_CLEANUP.bat  CONDA_SETUP_GUIDE.md  CONTRIBUTING.md  CURSOR_OPTIMIZATION_COMPLETE.md  DEMO_MODE_AND_MODELS_SUMMARY.md  DEPLOY_FULL_EXPERIENCE.md  (+205 more)
.claude/: claude_instruction_metaprompt.md.txt  launch_mcp.bat  settings.local.json  verify_setup.py
.streamlit/: config.toml  config_metastation.toml
3000_ELO_SYSTEM_COMPLETE/: index.html
AGENT_INSTRUCTIONS/: index.html
AI_INTEGRATION_SUMMARY/: index.html
AUDIT/: index.html
BUG_FIXES_SUMMARY/: index.html
CHANGELOG/: index.html
CLAUDE/: index.html
CLAUDE_CODE_DEVELOPMENT_GUIDE/: index.html
CLAUDE_DESKTOP_INTEGRATION/: index.html
CONDA_SETUP_GUIDE/: index.html
DEPLOYMENT/: index.html
DEPLOYMENT_STATUS/: index.html
ELEVATION_AND_TRANSCENDENCE_MASTERPLAN/: index.html
FINAL_3000ELO_WEBSITE_COMPLETION_SUMMARY/: index.html
FINAL_ORGANIZATION_SUMMARY/: index.html
GALLERY_ENHANCEMENT_SUMMARY/: index.html
GALLERY_FIX_SUMMARY/: index.html
GLOBAL_ACCESS_GUIDE/: index.html
IMPLEMENTATION_SUMMARY/: index.html
INTERNAL_INSPIRATION/: index.html
LAUNCH_INSTRUCTIONS/: index.html
MCP_ENHANCEMENTS/: index.html
MCP_SETUP_GUIDE/: index.html
METASTATION_DESIGN/: index.html
META_PROMPT_ENGINEERING_PRINCIPLES/: index.html
META_PROMPT_ENGINEERING_README/: index.html
ML_inspiration/: index.html
PHASE3_ACHIEVEMENT_SUMMARY/: index.html
PROFESSIONALIZATION_SUMMARY/: index.html
PROJECT_STRUCTURE/: index.html
README_3000_ELO_METAGAMER/: index.html
README_COMPLETE_SETUP/: index.html
README_DASHBOARD_SETUP/: index.html
README_WEBSITE/: index.html
REPOSITORY_GUIDE_FOR_NOURI/: index.html
REPOSITORY_ORGANIZATION_SUMMARY/: index.html
REPOSITORY_REORGANIZATION_SUMMARY/: index.html
TRANSCENDENCE_SUMMARY/: index.html
UNITY_INTEGRATION_GUIDE/: index.html
UNITY_PROTOCOL/: index.html
UnityProofs/: ComprehensiveUnity.lean  FinalUnityProof.lean  SimpleUnity.lean  Unity_Mathematics_Verified.lean  VerifiedUnity.lean
VERSION_1_1_ROADMAP/: index.html
VERTEX_AI_SETUP/: index.html
Visualization_guidelines/: index.html
advanced_experiments/: metastation_unity_consciousness_equation.py
agents/: magic_consciousness_agent.py
ai_agent/: __init__.py  app.py  prepare_index.py  requirements.txt
algorithms/: unity_deduplication_engine.py  unity_robust_inference.py
api/: Dockerfile  README.md  README_ENHANCED.md  __init__.py  ai-agent-access.json  chat.py  consciousness.py  consciousness_field_backend.py  deploy_enhanced.sh  docker-compose.enhanced.yml  docker-compose.yml  enhanced_api_server.py  enhanced_mcp_server.py  env.example  main.py  nginx.conf  requirements.txt  requirements_enhanced.txt  security.py  start.sh  test_api.py  unified_api_server.py  unified_server.py  unity_api.py  unity_api_production.py  unity_api_server.py  unity_research_api.py
benchmarks/: unity_empirical_validation.py
binder/: consciousness-field.ipynb  quantum-unity-demo.ipynb
codebase_understanding_for_architect/: index.html
community/: unity_research_community.py
config/: Dockerfile  ENVIRONMENT_FIXED.md  agent_authorization.json  ai_crawler_config.ini  ai_model_config.json  claude_desktop_config.json  claude_timeout_config.json  env.example  fix_python_final.bat  lakefile.toml  mcp_code_generator_server.py  mcp_consciousness_server.py  mcp_fastmcp_unity_server.py  mcp_launcher.py  mcp_repository_server.py  mcp_servers.json  mcp_unity_server.py  mcp_website_server.py  requirements-dashboards.txt  requirements_3000_elo.txt  settings.py  setup.py  unity_manifest.json  unity_prisoner.py  website_dalle_integration_test_results.json  wellbeing.json
consciousness/: field_equation_solver.py  sacred_geometry_engine.py  unity_meditation_system.py
core/: __init__.py  comprehensive_fixes.py  consciousness.py  consciousness_api.py  consciousness_models.py  dedup.py  econometric_unity_analysis.py  emergent_unity_systems.py  enhanced_unity_mathematics.py  enhanced_unity_operations.py  fix_critical_errors.py  hyperdimensional_unity_mathematics.py  integrated_information_theory.py  logging_config.py  mathematical_proofs.py  meta_validation_engine.py  self_improving_unity.py  transcendental_unity_computing.py  unity_algebra.py  unity_engine.py  unity_equation.py  unity_lab_enhanced.py  unity_manifold.py  unity_mathematics.py  universal_api.py  vertex_ai_corpus.py  visualization_kernels.py  von_neumann_unity_automata.py
css/: proofs.css  research.css  style.css
dashboards/: master_unity_dashboard.py  unity.html
data/: errors_found.txt  omega_evolution_results.json  social_snap.json  test_sample.json
deployment/: DEPLOYMENT_CHECKLIST.md  Procfile  QUICK_START.md  compose.yaml  deploy.sh  pre_deployment_check.py  pyproject.toml  requirements.txt  unity_web_server.py
deployment/v2/: docker-compose.yml
deployment/v2/kubernetes/: namespace.yaml  omega-microkernel.yaml
development_master_plan/: index.html
docs/: 3000_ELO_SYSTEM_COMPLETE.md  AGENT_ECOSYSTEM_DOCUMENTATION.md  AGENT_INSTRUCTIONS.md  AI_INTEGRATION_COMPLETE.md  AI_INTEGRATION_SUMMARY.md  BACKEND_ENHANCEMENT_PLAN.md  BUG_FIXES_SUMMARY.md  CHAT_INTEGRATION_GUIDE.md  CHAT_SYSTEM_V1_1_UPGRADE.md  CLAUDE.md  CLAUDE_CODE_DEVELOPMENT_GUIDE.md  CLAUDE_DESKTOP_MCP_READY.md  CLAUDE_DESKTOP_MCP_SETUP.md  CLAUDE_WORKFLOW_README.md  CONSCIOUSNESS_ENHANCED_WORKFLOWS.md  DEPLOYMENT.md  (+47 more)
(+1050 files in other folders)
